feat(ci): update the ci with a single file
Use the reusable workflows to group the jobs in a single file.

--- a/.github/workflows/safety.yml
+++ b/.github/workflows/safety.yml
@@ -1,19 +1,15 @@
+name: safety
+on:
+  workflow_call:
 permissions:
   contents: read
-on:
-  push:
-    branches: [main]
-  pull_request:
-# Spend CI time only on latest ref: https://github.com/jonhoo/rust-ci-conf/pull/5
-concurrency:
-  group: ${{ github.workflow }}-${{ github.head_ref || github.run_id }}
-  cancel-in-progress: true
-name: safety
+env:
+  CARGO_TERM_COLOR: always
 jobs:
   sanitizers:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v3
+      - uses: actions/checkout@v4
         with:
           submodules: true
       - name: Install nightly
@@ -49,7 +45,7 @@ jobs:
   miri:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v3
+      - uses: actions/checkout@v4
         with:
           submodules: true
       - run: |
@@ -66,7 +62,7 @@ jobs:
   loom:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v3
+      - uses: actions/checkout@v4
         with:
           submodules: true
       - name: Install stable
