--- a/.github/workflows/nostd.yml
+++ b/.github/workflows/nostd.yml
@@ -5,6 +5,8 @@ permissions:
   contents: read
 env:
   CARGO_TERM_COLOR: always
+  SCCACHE_GHA_ENABLED: "true"
+  RUSTC_WRAPPER: "sccache"
 jobs:
   nostd:
     runs-on: ubuntu-latest
@@ -18,6 +20,10 @@ jobs:
           submodules: true
       - name: Install stable
         uses: dtolnay/rust-toolchain@stable
+      - name: Install sccache-cache
+        uses: mozilla-actions/sccache-action@v0.0.3
+      - name: Run sccache stat for check
+        run: ${SCCACHE_PATH} --show-stats
       - name: rustup target add ${{ matrix.target }}
         run: rustup target add ${{ matrix.target }}
       - name: cargo check
