--- a/.github/workflows/safety.yml
+++ b/.github/workflows/safety.yml
@@ -5,6 +5,8 @@ permissions:
   contents: read
 env:
   CARGO_TERM_COLOR: always
+  SCCACHE_GHA_ENABLED: "true"
+  RUSTC_WRAPPER: "sccache"
 jobs:
   sanitizers:
     runs-on: ubuntu-latest
@@ -14,6 +16,10 @@ jobs:
           submodules: true
       - name: Install nightly
         uses: dtolnay/rust-toolchain@nightly
+      - name: Install sccache-cache
+        uses: mozilla-actions/sccache-action@v0.0.3
+      - name: Run sccache stat for check
+        run: ${SCCACHE_PATH} --show-stats
       - run: |
             # to get the symbolizer for debug symbol resolution
             sudo apt install llvm
@@ -55,6 +61,10 @@ jobs:
         with:
           toolchain: ${{ env.NIGHTLY }}
           components: miri
+      - name: Install sccache-cache
+        uses: mozilla-actions/sccache-action@v0.0.3
+      - name: Run sccache stat for check
+        run: ${SCCACHE_PATH} --show-stats
       - name: cargo miri test
         run: cargo miri test
         env:
@@ -67,6 +77,10 @@ jobs:
           submodules: true
       - name: Install stable
         uses: dtolnay/rust-toolchain@stable
+      - name: Install sccache-cache
+        uses: mozilla-actions/sccache-action@v0.0.3
+      - name: Run sccache stat for check
+        run: ${SCCACHE_PATH} --show-stats
       - name: cargo test --test loom
         run: cargo test --release --test loom
         env:
