--- a/.github/workflows/scheduled.yml
+++ b/.github/workflows/scheduled.yml
@@ -21,6 +21,10 @@ jobs:
           submodules: true
       - name: Install nightly
         uses: dtolnay/rust-toolchain@nightly
+      - name: Install sccache-cache
+        uses: mozilla-actions/sccache-action@v0.0.3
+      - name: Run sccache stat for check
+        run: ${SCCACHE_PATH} --show-stats
       - name: cargo generate-lockfile
         if: hashFiles('Cargo.lock') == ''
         run: cargo generate-lockfile
@@ -41,6 +45,12 @@ jobs:
       - name: Install beta
         if: hashFiles('Cargo.lock') != ''
         uses: dtolnay/rust-toolchain@beta
+      - name: Install sccache-cache
+        if: hashFiles('Cargo.lock') != ''
+        uses: mozilla-actions/sccache-action@v0.0.3
+      - name: Run sccache stat for check
+        if: hashFiles('Cargo.lock') != ''
+        run: ${SCCACHE_PATH} --show-stats
       - name: cargo update
         if: hashFiles('Cargo.lock') != ''
         run: cargo update
