--- a/.github/workflows/scheduled.yml
+++ b/.github/workflows/scheduled.yml
@@ -4,7 +4,7 @@ on:
     branches: [main]
   pull_request:
   schedule:
-    - cron:  '7 7 * * *'
+    - cron:  '0 5 * * 6'
 concurrency:
   group: ${{ github.workflow }}-${{ github.head_ref || github.run_id }}
   cancel-in-progress: true
