--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -77,6 +77,29 @@ jobs:
         uses: taiki-e/install-action@cargo-hack
       - name: cargo hack
         run: cargo hack --workspace --feature-powerset check
+  minimal:
+    runs-on: ubuntu-latest
+    name: ubuntu / stable / minimal-versions
+    steps:
+      - uses: actions/checkout@v4
+        with:
+          submodules: true
+      - name: Install stable
+        uses: dtolnay/rust-toolchain@stable
+      - name: Install nightly for -Zminimal-versions
+        uses: dtolnay/rust-toolchain@nightly
+      - name: Install cargo hack
+        uses: taiki-e/install-action@cargo-hack
+      - name: Install cargo minimal-versions
+        uses: taiki-e/install-action@cargo-minimal-versions
+      - name: Install sccache-cache
+        uses: mozilla-actions/sccache-action@v0.0.3
+      - name: Run sccache stat for check
+        run: ${SCCACHE_PATH} --show-stats
+      - name: rustup default stable
+        run: rustup default stable
+      - name: Check minimal versions
+        run: cargo minimal-versions check --workspace --ignore-private --detach-path-deps --direct
   msrv:
     runs-on: ubuntu-latest
     strategy:
