--- a/.github/workflows/nostd.yml
+++ b/.github/workflows/nostd.yml
@@ -1,6 +1,7 @@
 name: no-std
 on:
   workflow_call:
+  workflow_dispatch:
 permissions:
   contents: read
 env:
@@ -22,8 +23,6 @@ jobs:
         uses: dtolnay/rust-toolchain@stable
       - name: Install sccache-cache
         uses: mozilla-actions/sccache-action@v0.0.4
-      - name: Run sccache stat for check
-        run: ${SCCACHE_PATH} --show-stats
       - name: rustup target add ${{ matrix.target }}
         run: rustup target add ${{ matrix.target }}
       - name: cargo check
