--- a/.github/workflows/scheduled.yml
+++ b/.github/workflows/scheduled.yml
@@ -4,9 +4,11 @@ on:
     branches: [main]
   pull_request:
   schedule:
-    - cron:  '0 5 * * 6'
+    # At 05:00 on Saturday.
+    - cron: "0 5 * * 6"
 concurrency:
-  group: ${{ github.workflow }}-${{ github.head_ref || github.run_id }}
+  # See the .github/workflow/ci.yaml for more information
+  group: ${{ github.workflow }}-${{ github.ref || github.run_id }}
   cancel-in-progress: true
 permissions:
   contents: read
@@ -23,13 +25,11 @@ jobs:
         uses: dtolnay/rust-toolchain@nightly
       - name: Install sccache-cache
         uses: mozilla-actions/sccache-action@v0.0.4
-      - name: Run sccache stat for check
-        run: ${SCCACHE_PATH} --show-stats
       - name: cargo generate-lockfile
         if: hashFiles('Cargo.lock') == ''
         run: cargo generate-lockfile
       - name: cargo test --locked
-        run: cargo test --locked --all-features --all-targets
+        run: cargo test --locked --all-features --all-targets --workspace
   # https://twitter.com/alcuadrado/status/1571291687837732873
   update:
     runs-on: ubuntu-latest
@@ -37,7 +37,7 @@ jobs:
     # There's no point running this if no Cargo.lock was checked in in the
     # first place, since we'd just redo what happened in the regular test job.
     # Unfortunately, hashFiles only works in if on steps, so we reepeat it.
-    # if: hashFiles('Cargo.lock') != ''
+    # if: hashFiles('Cargo.lock') != '' --workspace
     steps:
       - uses: actions/checkout@v4
         with:
@@ -48,14 +48,11 @@ jobs:
       - name: Install sccache-cache
         if: hashFiles('Cargo.lock') != ''
         uses: mozilla-actions/sccache-action@v0.0.4
-      - name: Run sccache stat for check
-        if: hashFiles('Cargo.lock') != ''
-        run: ${SCCACHE_PATH} --show-stats
       - name: cargo update
         if: hashFiles('Cargo.lock') != ''
         run: cargo update
       - name: cargo test
         if: hashFiles('Cargo.lock') != ''
-        run: cargo test --locked --all-features --all-targets
+        run: cargo test --locked --all-features --all-targets --workspace
         env:
           RUSTFLAGS: -D deprecated
