--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,18 @@
 [package]
 name = "phoneix-chan"
 version = "0.1.0"
-edition = "2024"
+edition = "2021"
+rust-version = "1.78"
 
 [dependencies]
+async-tungstenite = { version = "0.29.0", features = ["tokio-rustls-manual-roots"] }
+base64 = "0.22.1"
+rustls = "0.23.0"
+thiserror = "2.0.0"
+tokio = { version = "~1.43", features = [] }
+tokio-rustls = "0.26.2"
+tracing = "0.1.0"
+tungstenite = "0.26.0"
+
+[dev-dependencies]
+tokio = { version = "~1.43", features = ["macros"] }
