--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,6 +16,7 @@ tokio-rustls = "0.26.0"
 tracing = "0.1.0"
 tungstenite = "0.26.0"
 rustc-hash = "2.0.0"
+futures= "0.3.0"
 
 [dev-dependencies]
 tokio = { version = "~1.43", features = ["macros"] }
