--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,12 +1,19 @@
 [package]
 name = "phoneix-chan"
 version = "0.1.0"
+categories = ["web-programming::websocket", "asynchronous"]
 edition = "2021"
+keywords = ["phoenix", "channel", "elixir", "websocket", "async"]
+license = "APACHE-2.0 or MIT"
+repository = "https://github.com/joshuachp/phoenix-chan"
 rust-version = "1.78"
+description = "Async Phoenix channle Client library implementation"
 
 [dependencies]
 async-tungstenite = { version = "0.29.0", features = ["tokio-rustls-manual-roots"] }
 base64 = "0.22.0"
+futures = "0.3.0"
+rustc-hash = "2.0.0"
 rustls = "0.23.0"
 serde = { version = "1.0.0", features = ["alloc", "derive"] }
 serde_json = { version = "1.0.0", features = ["alloc"] }
@@ -15,8 +22,6 @@ tokio = { version = "~1.43", features = ["sync", "time"] }
 tokio-rustls = "0.26.0"
 tracing = "0.1.0"
 tungstenite = "0.26.0"
-rustc-hash = "2.0.0"
-futures= "0.3.0"
 
 [dev-dependencies]
 tokio = { version = "~1.43", features = ["macros"] }
