fix(typo): name of the crate

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "phoneix-chan"
+name = "phoenix-chan"
 version = "0.1.0"
 categories = ["web-programming::websocket", "asynchronous"]
 edition = "2021"
