--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,7 +18,7 @@ rustls = "0.23.0"
 serde = { version = "1.0.0", features = ["alloc", "derive"] }
 serde_json = { version = "1.0.0", features = ["alloc"] }
 thiserror = "2.0.0"
-tokio = { version = "~1.43", features = ["sync", "time"] }
+tokio = { version = "1.43.0", features = ["sync", "time"] }
 tokio-rustls = "0.26.0"
 tracing = "0.1.0"
 tungstenite = { version = "0.26.0" }
