--- a/.github/dependabot.yaml
+++ b/.github/dependabot.yaml
@@ -6,10 +6,6 @@ updates:
       interval: weekly
   - package-ecosystem: cargo
     directory: /
+    versioning-strategy: increase-if-necessary
     schedule:
       interval: weekly
-    ignore:
-      - dependency-name: "*"
-        update-types:
-          - version-update:semver-patch
-          - version-update:semver-minor
