--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -4,112 +4,130 @@ on:
   workflow_dispatch:
 permissions:
   contents: read
+defaults:
+  run:
+    shell: bash
 env:
+  # needed for cargo-insta and other tools
+  CI: "true"
   CARGO_TERM_COLOR: always
   SCCACHE_GHA_ENABLED: "true"
   RUSTC_WRAPPER: "sccache"
+  RUSTFLAGS: -D warnings
+  RUSTDOCFLAGS: -D warnings
+  MAIN_PACKAGE: "@MAIN_CRATE@"
 jobs:
   fmt:
-    runs-on: ubuntu-latest
-    name: stable / fmt
+    runs-on: ubuntu-24.04
     steps:
       - uses: actions/checkout@v6
         with:
           submodules: true
-      - name: Install stable
-        uses: dtolnay/rust-toolchain@stable
-        with:
-          components: rustfmt
+      - uses: actions-rust-lang/setup-rust-toolchain@v1.15.2
       - name: cargo fmt
         run: cargo fmt --check --all
   clippy:
-    runs-on: ubuntu-latest
-    name: ${{ matrix.toolchain }} / clippy
-    strategy:
-      fail-fast: false
-      matrix:
-        toolchain: [stable, beta]
+    runs-on: ubuntu-24.04
     steps:
       - uses: actions/checkout@v6
         with:
           submodules: true
-      - name: Install ${{ matrix.toolchain }}
-        uses: dtolnay/rust-toolchain@master
-        with:
-          toolchain: ${{ matrix.toolchain }}
-          components: clippy
-      - name: Install sccache-cache
-        uses: mozilla-actions/sccache-action@v0.0.9
+      - uses: ./.github/actions/install-deps
+      - uses: actions-rust-lang/setup-rust-toolchain@v1.15.2
+      - uses: mozilla-actions/sccache-action@v0.0.9
       - name: cargo clippy
-        run: cargo clippy --all-targets --all-features --workspace -- -D warnings
+        run: cargo clippy --locked --all-targets --all-features --workspace
   doc:
-    runs-on: ubuntu-latest
-    name: nightly / doc
+    runs-on: ubuntu-24.04
     steps:
       - uses: actions/checkout@v6
         with:
           submodules: true
-      - name: Install nightly
-        uses: dtolnay/rust-toolchain@nightly
-      - name: Install sccache-cache
-        uses: mozilla-actions/sccache-action@v0.0.9
-      - name: cargo doc
-        run: cargo doc --no-deps --all-features --workspace
-        env:
-          RUSTDOCFLAGS: --cfg docsrs -D warnings
-  hack:
-    runs-on: ubuntu-latest
-    name: ubuntu / stable / features
+      - uses: ./.github/actions/install-deps
+      - uses: actions-rust-lang/setup-rust-toolchain@v1.15.2
+        with:
+          toolchain: nightly
+      - uses: mozilla-actions/sccache-action@v0.0.9
+      - name: Install cargo-docs-rs
+        uses: dtolnay/install@cargo-docs-rs
+      - run: |
+          cargo docs-rs --locked -p "$MAIN_CRATE"
+  features:
+    runs-on: ubuntu-24.04
     steps:
       - uses: actions/checkout@v6
         with:
           submodules: true
-      - name: Install stable
-        uses: dtolnay/rust-toolchain@stable
-      - name: Install sccache-cache
-        uses: mozilla-actions/sccache-action@v0.0.9
+      - uses: ./.github/actions/install-deps
+      - uses: actions-rust-lang/setup-rust-toolchain@v1.15.2
+      - uses: mozilla-actions/sccache-action@v0.0.9
       - name: cargo install cargo-hack
         uses: taiki-e/install-action@cargo-hack
-      - name: cargo hack
-        run: cargo hack --workspace --feature-powerset check
-  minimal:
-    runs-on: ubuntu-latest
-    name: ubuntu / stable / minimal-versions
+      - name: cargo hack test
+        # Doesn't test all combination of features, but the space is becoming too large and it takes
+        # too long
+        run: cargo hack --each-feature test --locked -p "$MAIN_PACKAGE"
+  minimal-versions:
+    runs-on: ubuntu-24.04
     steps:
       - uses: actions/checkout@v6
         with:
           submodules: true
-      - name: Install stable
-        uses: dtolnay/rust-toolchain@stable
-      - name: Install nightly for -Zminimal-versions
-        uses: dtolnay/rust-toolchain@nightly
-      - name: Install cargo hack
-        uses: taiki-e/install-action@cargo-hack
-      - name: Install cargo minimal-versions
-        uses: taiki-e/install-action@cargo-minimal-versions
-      - name: Install sccache-cache
-        uses: mozilla-actions/sccache-action@v0.0.9
-      - name: rustup default stable
-        run: rustup default stable
+      - uses: ./.github/actions/install-deps
+      - name: install rust stable
+        uses: actions-rust-lang/setup-rust-toolchain@v1.15.2
+      - name: install rust nightly
+        uses: actions-rust-lang/setup-rust-toolchain@v1.15.2
+        with:
+          toolchain: nightly
+      - uses: mozilla-actions/sccache-action@v0.0.9
+      - uses: taiki-e/install-action@v2.49.43
+        with:
+          tool: cargo-hack,cargo-minimal-versions
+      - run: rustup default stable
       - name: Check minimal versions
         run: cargo minimal-versions check --workspace --ignore-private --detach-path-deps=skip-exact --direct
-        env:
-          RUSTFLAGS: -D warnings
   msrv:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-24.04
     strategy:
       matrix:
-        msrv: [1.56.1] # 2021 edition requires 1.56
-    name: ubuntu / ${{ matrix.msrv }}
+        msrv: [1.85] # 2021 edition requires 1.85
+    name: msrv / ${{ matrix.msrv }}
     steps:
       - uses: actions/checkout@v6
         with:
           submodules: true
-      - name: Install ${{ matrix.msrv }}
-        uses: dtolnay/rust-toolchain@master
+      - uses: ./.github/actions/install-deps
+      - uses: actions-rust-lang/setup-rust-toolchain@v1.15.2
         with:
           toolchain: ${{ matrix.msrv }}
-      - name: Install sccache-cache
-        uses: mozilla-actions/sccache-action@v0.0.9
+      - uses: mozilla-actions/sccache-action@v0.0.9
+      - uses: taiki-e/install-action@cargo-hack
       - name: cargo +${{ matrix.msrv }} check
-        run: cargo check --all-features --workspace
+        run: cargo +${{ matrix.msrv }} hack --no-dev-deps check --all-features -p "$MAIN_CRATE"
+  # Run semver-check on release branch push or PR
+  semver:
+    if: startsWith(github.base_ref, 'release-') || startsWith(github.ref, 'release-')
+    runs-on: ubuntu-24.04
+    steps:
+      - uses: actions/checkout@v6
+        with:
+          submodules: true
+      - uses: actions-rust-lang/setup-rust-toolchain@v1.15.2
+      - uses: mozilla-actions/sccache-action@v0.0.9
+      - name: Check library API semver breakages
+        uses: obi1kenobi/cargo-semver-checks-action@v2.8
+        with:
+          release-type: patch
+  # Check that the create can be compiled with only the packaged files
+  for-publish:
+    name: stable / for-publish
+    runs-on: ubuntu-24.04
+    steps:
+      - uses: actions/checkout@v6
+        with:
+          submodules: true
+      - uses: ./.github/actions/install-deps
+      - uses: actions-rust-lang/setup-rust-toolchain@v1.15.2
+      - uses: mozilla-actions/sccache-action@v0.0.9
+      - run: ./scripts/ci/check-for-publish.sh
