--- a/.github/workflows/nostd.yml
+++ b/.github/workflows/nostd.yml
@@ -4,14 +4,18 @@ on:
   workflow_dispatch:
 permissions:
   contents: read
+defaults:
+  run:
+    shell: bash
 env:
+  CI: "true"
   CARGO_TERM_COLOR: always
   SCCACHE_GHA_ENABLED: "true"
   RUSTC_WRAPPER: "sccache"
 jobs:
   nostd:
-    runs-on: ubuntu-latest
-    name: ${{ matrix.target }}
+    runs-on: ubuntu-24.04
+    name: nostd / ${{ matrix.target }}
     strategy:
       matrix:
         target: [thumbv7m-none-eabi, aarch64-unknown-none]
@@ -19,11 +23,10 @@ jobs:
       - uses: actions/checkout@v6
         with:
           submodules: true
-      - name: Install stable
-        uses: dtolnay/rust-toolchain@stable
-      - name: Install sccache-cache
-        uses: mozilla-actions/sccache-action@v0.0.9
-      - name: rustup target add ${{ matrix.target }}
-        run: rustup target add ${{ matrix.target }}
+      - uses: ./.github/actions/install-deps
+      - uses: actions-rust-lang/setup-rust-toolchain@v1.15.2
+        with:
+          target: ${{ matrix.target }}
+      - uses: mozilla-actions/sccache-action@v0.0.9
       - name: cargo check
-        run: cargo check --target ${{ matrix.target }} --no-default-features
+        run: cargo check --locked --target ${{ matrix.target }} --no-default-features
