--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -4,39 +4,35 @@ on:
   workflow_dispatch:
 permissions:
   contents: read
+defaults:
+  run:
+    shell: bash
 env:
+  CI: "true"
   CARGO_TERM_COLOR: always
   SCCACHE_GHA_ENABLED: "true"
   RUSTC_WRAPPER: "sccache"
 jobs:
-  required:
-    runs-on: ubuntu-latest
-    name: ubuntu / ${{ matrix.toolchain }}
-    strategy:
-      matrix:
-        toolchain: [stable, beta]
+  test:
+    runs-on: ubuntu-24.04
     steps:
       - uses: actions/checkout@v6
         with:
           submodules: true
-      - name: Install ${{ matrix.toolchain }}
-        uses: dtolnay/rust-toolchain@master
+      - uses: ./.github/actions/install-deps
+      - uses: actions-rust-lang/setup-rust-toolchain@v1.15.2
+      - uses: mozilla-actions/sccache-action@v0.0.9
+      - uses: taiki-e/install-action@v2.49.43
         with:
-          toolchain: ${{ matrix.toolchain }}
-      - name: Install sccache-cache
-        uses: mozilla-actions/sccache-action@v0.0.9
-      - name: cargo generate-lockfile
-        if: hashFiles('Cargo.lock') == ''
-        run: cargo generate-lockfile
-      # https://twitter.com/jonhoo/status/1571290371124260865
-      - name: cargo test --locked
-        run: cargo test --locked --all-features --all-targets --workspace
+          tools: cargo-nextest
+      - name: cargo nextest run
+        run: cargo nextest run --locked --all-features --all-targets --workspace
       # https://github.com/rust-lang/cargo/issues/6669
-      - name: cargo test --doc
+      - name: cargo test doc
         run: cargo test --locked --all-features --doc --workspace
   os-check:
     runs-on: ${{ matrix.os }}
-    name: ${{ matrix.os }} / stable
+    name: os-check / ${{ matrix.os }}
     strategy:
       fail-fast: false
       matrix:
@@ -45,40 +41,51 @@ jobs:
       - uses: actions/checkout@v6
         with:
           submodules: true
-      - name: Install stable
-        uses: dtolnay/rust-toolchain@stable
-      - name: Install sccache-cache
-        uses: mozilla-actions/sccache-action@v0.0.9
-      - name: cargo generate-lockfile
-        if: hashFiles('Cargo.lock') == ''
-        run: cargo generate-lockfile
-      - name: cargo test
-        run: cargo test --locked --all-features --all-targets --workspace
+      - uses: ./.github/actions/install-deps
+        with:
+          for-image: "${{ matrix.os }}"
+      - uses: actions-rust-lang/setup-rust-toolchain@v1.15.2
+      - uses: mozilla-actions/sccache-action@v0.0.9
+      - uses: taiki-e/install-action@cargo-hack
+      - name: cargo nextest run
+        run: cargo nextest run --locked --all-features --all-targets --workspace
   coverage:
-    runs-on: ubuntu-latest
-    name: ubuntu / stable / coverage
-    env:
-      # Enable logging otherwise the logging lines will count as not covered in the test coverage
-      RUST_LOG: trace
+    runs-on: ubuntu-24.04
     steps:
       - uses: actions/checkout@v6
         with:
           submodules: true
-      - name: Install stable
-        uses: dtolnay/rust-toolchain@stable
+      - uses: ./.github/actions/install-deps
+      - uses: actions-rust-lang/setup-rust-toolchain@v1.15.2
         with:
-          components: llvm-tools-preview
-      - name: Install sccache-cache
-        uses: mozilla-actions/sccache-action@v0.0.9
-      - name: cargo install cargo-tarpaulin
-        uses: taiki-e/install-action@cargo-tarpaulin
-      - name: cargo generate-lockfile
-        if: hashFiles('Cargo.lock') == ''
-        run: cargo generate-lockfile
-      - name: cargo tarpaulin
-        run: cargo tarpaulin --engine llvm --locked --all-features --ignore-tests --lib --out xml -- --test-threads 1
+          toolchain: nightly
+          components: llvm-tools
+      - uses: mozilla-actions/sccache-action@v0.0.9
+      - uses: taiki-e/install-action@v2.49.43
+        with:
+          tool: grcov,rustfilt
+      - name: Generate coverage
+        run: |
+          EXPORT_FOR_CI=1 ./scripts/ci/coverage.sh
+      # Upload the coverage if we are not a PR from a fork, see ".github/workflows/coverage.yaml"
       - name: Upload to codecov.io
-        uses: codecov/codecov-action@v5
+        if: ${{ github.event_name == 'push' }}
+        uses: codecov/codecov-action@v5.5.1
         with:
           token: ${{secrets.CODECOV_TOKEN}}
           fail_ci_if_error: true
+      # Save data to use in workflow_run
+      - name: Save PR number
+        if: ${{ github.event_name == 'pull_request' }}
+        env:
+          PR_NUMBER: ${{ github.event.number }}
+        run: |
+          echo "$PR_NUMBER" > ./pr_number
+      - name: Upload coverage artifact
+        if: ${{ github.event_name == 'pull_request' }}
+        uses: actions/upload-artifact@v5
+        with:
+          name: coverage
+          path: |
+            pr_number
+            coverage-*.info
