--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -24,7 +24,7 @@ jobs:
       - uses: mozilla-actions/sccache-action@v0.0.9
       - uses: taiki-e/install-action@v2.49.43
         with:
-          tools: cargo-nextest
+          tool: cargo-nextest
       - name: cargo nextest run
         run: cargo nextest run --locked --all-features --all-targets --workspace
       # https://github.com/rust-lang/cargo/issues/6669
@@ -46,7 +46,9 @@ jobs:
           for-image: "${{ matrix.os }}"
       - uses: actions-rust-lang/setup-rust-toolchain@v1.15.2
       - uses: mozilla-actions/sccache-action@v0.0.9
-      - uses: taiki-e/install-action@cargo-hack
+      - uses: taiki-e/install-action@v2.49.43
+        with:
+          tool: cargo-nextest
       - name: cargo nextest run
         run: cargo nextest run --locked --all-features --all-targets --workspace
   coverage:
