--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -36,6 +36,7 @@ jobs:
     runs-on: ubuntu-24.04
     permissions:
       contents: write
+      id-token: write
     concurrency:
       group: release-plz-${{ github.ref }}
       cancel-in-progress: false
@@ -64,6 +65,7 @@ jobs:
     permissions:
       contents: write
       pull-requests: write
+      id-token: write
     concurrency:
       group: release-plz-${{ github.ref }}
       cancel-in-progress: false
