--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,11 +2,11 @@
 name = "phoenix-chan"
 version = "0.4.3"
 categories = ["web-programming::websocket", "asynchronous"]
-edition = "2021"
+edition = "2024"
 keywords = ["phoenix", "channel", "elixir", "websocket", "async"]
 license = "MIT OR Apache-2.0"
 repository = "https://github.com/joshuachp/phoenix-chan"
-rust-version = "1.78"
+rust-version = "1.85"
 description = "Async Phoenix channle Client library implementation"
 
 [dependencies]
@@ -18,11 +18,11 @@ rustls = "0.23.0"
 serde = { version = "1.0.118", features = ["alloc", "derive"] }
 serde_json = { version = "1.0.60", features = ["alloc"] }
 thiserror = "2.0.7"
-tokio = { version = "1.43.1", features = ["sync", "time"] }
+tokio = { version = "1.47.0", features = ["sync", "time"] }
 tokio-rustls = "0.26.0"
 tracing = "0.1.20"
 tungstenite = { version = "0.28.0" }
 
 [dev-dependencies]
 pretty_assertions = "1.4.1"
-tokio = { version = "~1.43", features = ["macros"] }
+tokio = { version = "1.47.0", features = ["macros"] }
